// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EsDataTableSimple <EsDataTableSimple items="['It1', 'It2']" /> 1`] = `
"<div class="table-responsive">
  <table role="table" class="table b-table table-borderless" id="__BVID__4">
    <tbody role="rowgroup">
      <tr role="row" class="">
        <td role="cell" class="">
          It1
        </td>
      </tr>
      <tr role="row" class="">
        <td role="cell" class="">
          It2
        </td>
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`EsDataTableSimple <EsDataTableSimple items="['It1', 'It2']" /> default prop values 1`] = `
"<div class="table-responsive">
  <table role="table" class="table b-table table-borderless">
    <tbody role="rowgroup">
      <tr role="row" class="">
        <td role="cell" class="">
          It1
        </td>
      </tr>
      <tr role="row" class="">
        <td role="cell" class="">
          It2
        </td>
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`EsDataTableSimple <EsDataTableSimple>Table Content</EsDataTableSimple> 1`] = `
"<div class="table-responsive">
  <table role="table" class="table b-table table-borderless">Table Content</table>
</div>"
`;
